update channel urls

--- a/template.html
+++ b/template.html
@@ -32,10 +32,10 @@
         <footer>
             <h2>Follow Me on Socials</h2>
             <div class="social-banners">
-                <a href="https://www.youtube.com/yourchannel" target="_blank">
+                <a href="https://www.youtube.com/@majesticcoding" target="_blank">
                     <img src="/static/yt-banner.png" alt="YouTube Banner">
                 </a>
-                <a href="https://www.twitch.tv/yourchannel" target="_blank">
+                <a href="https://www.twitch.tv/majesticcodingtwitch" target="_blank">
                     <img src="/static/twitch-banner.png" alt="Twitch Banner">
                 </a>
             </div>
