clean html and main.go

--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
                 <img src="{{.ProfileImageURL}}" alt="Profile Image">
             </div>
             <div class="profile-info">
-            <h3>Twitch User API Data</h3>
+            <h3> Profile Data</h3>
                 <p><strong>ID:</strong> {{.ID}}</p>
                 <p><strong>Login:</strong> {{.Login}}</p>
                 <p><strong>Display Name:</strong> {{.DisplayName}}</p>
